migrate to java 24